--- a/flex/manifest.json
+++ b/flex/manifest.json
@@ -1,10 +1,14 @@
 {
     "policy_store_id": "64ab6fd12a59ba88e5bd72236f43d992238d5592d6f5",
-    "generated_date": "2026-01-27T06:32:47.137344+00:00",
+    "generated_date": "2026-01-27T06:33:28.053851+00:00",
     "files": {
+        "entities/second_entity.json": {
+            "size": 270,
+            "checksum": "sha1:f7f660ca73d066d1f8284f69212899d8037a8f28"
+        },
         "manifest.json": {
-            "size": 1159,
-            "checksum": "sha1:9163a126582c624f72faa8bdbb0933dbaad58f94"
+            "size": 1011,
+            "checksum": "sha1:7c2cc231720d32e2cb6de187fc06e9d08692928d"
         },
         "metadata.json": {
             "size": 325,
