feat: update manifest.json

--- a/JanssenReactCedarlingRBAC/manifest.json
+++ b/JanssenReactCedarlingRBAC/manifest.json
@@ -1,14 +1,18 @@
 {
     "policy_store_id": "65c38cb629a964b423ee80dcdce7a76e0b37af9579bc",
-    "generated_date": "2026-01-28T13:34:08.186423+00:00",
+    "generated_date": "2026-01-28T13:38:47.080900+00:00",
     "files": {
+        "manifest.json": {
+            "size": 428,
+            "checksum": "sha1:02fff38f0824bc67c971297fbbe9eea24d493e67"
+        },
         "metadata.json": {
             "size": 359,
-            "checksum": "sha1:0ba275164a0e968346a4d4f7b46dc34caf3fbf61"
+            "checksum": "sha1:0ae9fcb84bd1ca1519102ba3e978ddc02362bf97"
         },
         "schema.cedarschema": {
-            "size": 4249,
-            "checksum": "sha1:de9b13535251cf9504555bde8a4c881f0c63ce52"
+            "size": 2370,
+            "checksum": "sha1:16c612244f8bcbf5266489d77300ae36355e62f6"
         }
     }
 }
