--- a/JanssenReactCedarlingRBAC/manifest.json
+++ b/JanssenReactCedarlingRBAC/manifest.json
@@ -1,10 +1,10 @@
 {
     "policy_store_id": "65c38cb629a964b423ee80dcdce7a76e0b37af9579bc",
-    "generated_date": "2026-01-28T13:42:53.325495+00:00",
+    "generated_date": "2026-01-28T13:43:17.514074+00:00",
     "files": {
         "manifest.json": {
-            "size": 563,
-            "checksum": "sha1:f150b891684732fb97f0b32943aa58518516a5f3"
+            "size": 734,
+            "checksum": "sha1:08ebd7a8670204596473c506fe760403150a5245"
         },
         "metadata.json": {
             "size": 359,
@@ -13,6 +13,10 @@
         "policies/AdminPerformAnyOperationOnResource.cedar": {
             "size": 109,
             "checksum": "sha1:64769fd63771d4402d6f84e918477d1a2c9dd02d"
+        },
+        "policies/ManagerCanAddUpdateViewTask.cedar": {
+            "size": 194,
+            "checksum": "sha1:b6b94d5035445d0ee4d35d456f76eb8d466e533d"
         },
         "schema.cedarschema": {
             "size": 2294,
