feat: update manifest.json

--- a/admin_ui/manifest.json
+++ b/admin_ui/manifest.json
@@ -1,10 +1,14 @@
 {
     "policy_store_id": "64fcde03554f371108e77763a7bf828b2ad252eba221",
-    "generated_date": "2026-01-29T14:58:49.474206+00:00",
+    "generated_date": "2026-01-30T08:31:36.016464+00:00",
     "files": {
+        "entities/test_entity.json": {
+            "size": 270,
+            "checksum": "sha1:cef61b8a49a7d0a8f74db141b780181c4222ce48"
+        },
         "manifest.json": {
             "size": 711,
-            "checksum": "sha1:cb422295a25b5412e3763bd35fad27a201a5d1d6"
+            "checksum": "sha1:9dd0b989f98768988bcb9010a80f79524d48668b"
         },
         "metadata.json": {
             "size": 339,
