--- a/admin_ui/manifest.json
+++ b/admin_ui/manifest.json
@@ -1,22 +1,18 @@
 {
     "policy_store_id": "4da73a5951d6d104a5f2d339133e15bb62e7abd8fb7a",
-    "generated_date": "2026-01-19T12:08:46.739945+00:00",
+    "generated_date": "2026-02-03T13:26:18.174275+00:00",
     "files": {
         "entities/test_entity.json": {
             "size": 263,
             "checksum": "sha1:f73ab8891aa1ee57d2764df30c3030ceb725da5d"
         },
         "manifest.json": {
-            "size": 859,
-            "checksum": "sha1:05363f11985d62c49e60b4aedb60e10c36129c29"
+            "size": 1006,
+            "checksum": "sha1:f933b70db3e68b24e72138117cc5d6d80bfda30f"
         },
         "metadata.json": {
             "size": 339,
             "checksum": "sha1:26150a7dfe23973c99fde59690fd5374c0fb28a3"
-        },
-        "policies/admin001.cedar": {
-            "size": 61,
-            "checksum": "sha1:b381230480c1167480efd512cccc78f1e1b8937c"
         },
         "schema.cedarschema": {
             "size": 5926,
@@ -25,6 +21,10 @@
         "trusted-issuers/admin_ui.json": {
             "size": 1597,
             "checksum": "sha1:a036eeaf070f4a5c80082941175f5d71a8f79761"
+        },
+        "trusted-issuers/jans.json": {
+            "size": 1567,
+            "checksum": "sha1:6acd982d7ac68b6fee295e425b77d0c25dbeb0e8"
         }
     }
 }
