--- a/admin_ui/manifest.json
+++ b/admin_ui/manifest.json
@@ -1,26 +1,30 @@
 {
     "policy_store_id": "4da73a5951d6d104a5f2d339133e15bb62e7abd8fb7a",
-    "generated_date": "2026-01-19T12:08:46.739945+00:00",
+    "generated_date": "2026-02-10T08:23:00.679765+00:00",
     "files": {
         "entities/test_entity.json": {
             "size": 263,
             "checksum": "sha1:f73ab8891aa1ee57d2764df30c3030ceb725da5d"
         },
         "manifest.json": {
-            "size": 859,
-            "checksum": "sha1:05363f11985d62c49e60b4aedb60e10c36129c29"
+            "size": 1006,
+            "checksum": "sha1:f933b70db3e68b24e72138117cc5d6d80bfda30f"
         },
         "metadata.json": {
             "size": 339,
-            "checksum": "sha1:26150a7dfe23973c99fde59690fd5374c0fb28a3"
+            "checksum": "sha1:474a02cf5c0974be3f1ac46aa24fdf3ebfc40d43"
         },
         "policies/admin001.cedar": {
             "size": 61,
             "checksum": "sha1:b381230480c1167480efd512cccc78f1e1b8937c"
         },
+        "policies/manager002.cedar": {
+            "size": 64,
+            "checksum": "sha1:fb93bf18d9ba1dd75591f17fbc3843a22b4e4fbc"
+        },
         "schema.cedarschema": {
-            "size": 5926,
-            "checksum": "sha1:b42c3ea4d1e9c2212275596c29dc58e8b5c39104"
+            "size": 5944,
+            "checksum": "sha1:0b9d857ce7ca670153bb3caa16676951a9499b4c"
         },
         "trusted-issuers/admin_ui.json": {
             "size": 1597,
